# TOPP-DWR

./: README.md  ReadMe.md
ecos/: CMakeLists.txt  package.xml
ecos/include/: glblopts.h
ecos/src/: cone.c  ecos.c  ecos.cpp  preproc.c  splamm.c
mosek/10.2/: CMakeLists.txt  mosek.lic  package.xml
mosek/10.2/doc/xml/: consts.xml
mosek/10.2/opt-server/var/Mosek/HTML/content/: alljobs.html  alltokens.html  myjobs.html  mytokens.html  userlist.html
mosek/10.2/opt-server/var/Mosek/HTML/template/: default.html
mosek/10.2/opt-server/var/Mosek/HTML/web/script/: gui.mjs  jobs.mjs  optapi.mjs  request.mjs  tokens.mjs  users.mjs
mosek/10.2/opt-server/var/Mosek/HTML/web/style/: stub.css  style.css
mosek/10.2/toolbox/examples/: mico1.m  mioinitsol.m  portfolio_1_basic.m  portfolio_2_frontier.m  portfolio_3_impact.m  portfolio_4_transcost.m  portfolio_5_card.m  portfolio_6_factor.m  response.m  simple.m  solutionquality.m
mosek/10.2/toolbox/r2017a/: mosekdiag.m
mosek/10.2/toolbox/r2017aom/: mosekopt.mexa64
mosek/10.2/tools/platform/linux64x86/: test.py
mosek/10.2/tools/platform/linux64x86/h/: fusion.h  fusion_fwd.h  monty_ndarray.h  monty_shape.h  mosek.h
mosek/10.2/tools/platform/linux64x86/src/fusion_cxx/: BaseModel.os  Debug.os  IntMap.os  SolverInfo.os  StringBuffer.os  fusion.cc  mosektask.os  mosektask_p.h
mosek/10.2/tools/platform/linuxaarch64/h/: fusion.h  monty_ndarray.h  mosek.h
mosek/10.2/tools/platform/linuxaarch64/src/fusion_cxx/: BaseModel.cc  BaseModel.os  Debug.os  IntMap.os  Makefile  SolverInfo.cc  SolverInfo.os  StringBuffer.os  fusion.cc  fusion_p.h  mosektask.cc  mosektask.os
topp_dwr/: CMakeLists.txt  package.xml
topp_dwr/files/: ccpp.yaml  cvte.yaml
topp_dwr/include/: data_type.hpp  non_uniform_bspline.hpp  tools.hpp  topp_dwr.hpp
topp_dwr/params/: params.yaml
topp_dwr/src/: main.cpp  non_uniform_bspline.cpp  tools.cpp  topp_dwr.cpp
